2009-06-23  Alexander Kurtakov  <akurtako@redhat.com> 	Remove parts from the old build. 	* assemble.xml: Removed. 	* fetch.xml: Removed. 	* build.xml: Remove old targets.