@@ -12,13 +12,6 @@
 	<property name="buildId" value="I20090611-1540" />
 
 	<available file="bootstrap/plugins" property="bootstrapped" value="true" />
-	<available file="fetch.xml" property="fetch.file.present" value="true" />
-
-	<target name="fetch" if="fetch.file.present">
-		<ant antfile="fetch.xml" target="applyPatches" />
-	</target>
-
-	<target name="cleanBuild" depends="fetch,clean,assemble" />
 
 	<target name="clean">
 		<delete dir="build" />
@@ -174,122 +167,7 @@
 		</java>
 	</target>
 
-	<target name="buildAll">
-		<!--FIXME Hack because help system doesn't build -->
-		<!--
-		<ant antfile="build.xml" dir="${buildDirectory}/features/org.eclipse.platform" target="all.children" inheritall="true">
-			<property name="target" value="build.jars" />
-			<property name="arch" value="${buildArch}" />
-			<property name="javacFailOnError" value="false" />
-		</ant>
-		-->
-		<java classname="org.eclipse.equinox.launcher.Main" fork="true" dir="${baseBuilder}" failonerror="true">
-			<classpath>
-				<pathelement location="${launcher}" />
-			</classpath>
-			<arg line="-configuration configuration " />
-			<arg line="-data ${buildworkspace} " />
-			<arg line="-application org.eclipse.ant.core.antRunner " />
-			<arg line="-buildfile ${buildDirectory}/features/org.eclipse.platform/build.xml" />
-			<arg line="-consoleLog " />
-			<arg line="-propertyfile ${basedir}/build.properties " />
-			<arg line="-Djava.home=${java.home} " />
-			<arg line="-Duser.home=${homeDir} " />
-			<arg line="-Darch=${buildArch} " />
-			<arg line="-Dtarget=build.jars " />
-			<arg line="-DjavacFailOnError=false" />
-			<arg line="all.children " />
-			<jvmarg value="-Xms256m" />
-			<jvmarg value="-Xmx1024m" />
-			<jvmarg value="-XX:MaxPermSize=384m" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/core/internal/dtree/DataTreeNode,forwardDeltaWith&quot;" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/jdt/internal/compiler/lookup/ParameterizedMethodBinding,&lt;init&gt;&quot;" />
-		</java>
-		<!--
-		<ant antfile="build.xml" dir="${buildDirectory}/features/org.eclipse.help" target="all.children" inheritall="true">
-			<property name="target" value="build.jars" />
-			<property name="arch" value="${buildArch}" />
-		</ant>
-		-->
-		<java classname="org.eclipse.equinox.launcher.Main" fork="true" dir="${baseBuilder}" failonerror="true">
-			<classpath>
-				<pathelement location="${launcher}" />
-			</classpath>
-			<arg line="-configuration configuration " />
-			<arg line="-data ${buildworkspace} " />
-			<arg line="-application org.eclipse.ant.core.antRunner " />
-			<arg line="-buildfile ${buildDirectory}/features/org.eclipse.help/build.xml" />
-			<arg line="-consoleLog " />
-			<arg line="-propertyfile ${basedir}/build.properties " />
-			<arg line="-Djava.home=${java.home} " />
-			<arg line="-Duser.home=${homeDir} " />
-			<arg line="-Darch=${buildArch} " />
-			<arg line="-Dtarget=build.jars " />
-			<arg line="all.children " />
-			<jvmarg value="-Xms256m" />
-			<jvmarg value="-Xmx1024m" />
-			<jvmarg value="-XX:MaxPermSize=384m" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/core/internal/dtree/DataTreeNode,forwardDeltaWith&quot;" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/jdt/internal/compiler/lookup/ParameterizedMethodBinding,&lt;init&gt;&quot;" />
-		</java>
-		<!--
-		<ant antfile="build.xml" dir="${buildDirectory}/features/org.eclipse.platform" target="all.children" inheritall="true">
-			<property name="target" value="clean" />
-			<property name="arch" value="${buildArch}" />
-		</ant>
-		-->
-		<java classname="org.eclipse.equinox.launcher.Main" fork="true" dir="${baseBuilder}" failonerror="true">
-			<classpath>
-				<pathelement location="${launcher}" />
-			</classpath>
-			<arg line="-configuration configuration " />
-			<arg line="-data ${buildworkspace} " />
-			<arg line="-application org.eclipse.ant.core.antRunner " />
-			<arg line="-buildfile ${buildDirectory}/features/org.eclipse.platform/build.xml" />
-			<arg line="-consoleLog " />
-			<arg line="-propertyfile ${basedir}/build.properties " />
-			<arg line="-Djava.home=${java.home} " />
-			<arg line="-Duser.home=${homeDir} " />
-			<arg line="-Darch=${buildArch} " />
-			<arg line="-Dtarget=clean " />
-			<arg line="all.children " />
-			<jvmarg value="-Xms256m" />
-			<jvmarg value="-Xmx1024m" />
-			<jvmarg value="-XX:MaxPermSize=384m" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/core/internal/dtree/DataTreeNode,forwardDeltaWith&quot;" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/jdt/internal/compiler/lookup/ParameterizedMethodBinding,&lt;init&gt;&quot;" />
-		</java>
-		<!-- END OF HACK -->
-		<!--
-		<ant antfile="build.xml" dir="${buildDirectory}/features/${featureToBuild}" target="build.jars" inheritall="true">
-			<property name="arch" value="${buildArch}" />
-			<property name="target" value="build.jars" />
-		</ant>
-		-->
-		<java classname="org.eclipse.equinox.launcher.Main" fork="true" dir="${baseBuilder}" failonerror="true">
-			<classpath>
-				<pathelement location="${launcher}" />
-			</classpath>
-			<arg line="-configuration configuration " />
-			<arg line="-data ${buildworkspace} " />
-			<arg line="-application org.eclipse.ant.core.antRunner " />
-			<arg line="-buildfile ${buildDirectory}/features/${featureToBuild}/build.xml" />
-			<arg line="-consoleLog " />
-			<arg line="-propertyfile ${basedir}/build.properties " />
-			<arg line="-Djava.home=${java.home} " />
-			<arg line="-Duser.home=${homeDir} " />
-			<arg line="-Darch=${buildArch} " />
-			<arg line="-Dtarget=build.jars " />
-			<arg line="build.jars " />
-			<jvmarg value="-Xms256m" />
-			<jvmarg value="-Xmx1024m" />
-			<jvmarg value="-XX:MaxPermSize=384m" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/core/internal/dtree/DataTreeNode,forwardDeltaWith&quot;" />
-			<jvmarg value="-XX:CompileCommand=&quot;exclude,org/eclipse/jdt/internal/compiler/lookup/ParameterizedMethodBinding,&lt;init&gt;&quot;" />
-		</java>
-	</target>
-
-	<target name="compilelibs" depends="buildAll">
+	<target name="compilelibs" >
 		<ant antfile="build.xml" target="build.nativeLibraries" dir="${buildDirectory}/plugins/org.eclipse.swt.gtk.linux.${buildArch}" />
 
 		<property name="launcherlibs" value="${buildDirectory}/features/org.eclipse.equinox.executable" />
@@ -315,53 +193,6 @@
 		<!-- build libupdate -->
 		<ant dir="${buildDirectory}/plugins/org.eclipse.update.core.linux/src" antfile="build.xml" />
 
-	</target>
-
-	<target name="assemble">
-		<!-- if we're running with antRunner application -->
-		<!--
-		<ant inheritall="true" dir="${basedir}" antfile="assemble.xml" />
-		-->
-		<java classname="org.eclipse.equinox.launcher.Main" fork="true" dir="${baseBuilder}" failonerror="true">
-			<classpath>
-				<pathelement location="${launcher}" />
-			</classpath>
-			<arg line="-configuration configuration " />
-			<arg line="-data ${buildworkspace} " />
-			<arg line="-application org.eclipse.ant.core.antRunner " />
-			<arg line="-buildfile ${basedir}/assemble.xml" />
-			<arg line="-propertyfile ${basedir}/build.properties " />
-			<arg line="-DbuildArch=${buildArch} " />
-			<arg line="-DbuildDirectory=${buildDirectory} " />
-			<arg line="-DbuildId=${buildId} " />
-			<arg line="-DfeatureToBuild=${featureToBuild} " />
-			<arg line="-DbuildId=${buildId} " />
-			<jvmarg value="-Xms1024m" />
-			<jvmarg value="-Xmx2048m" />
-			<jvmarg value="-XX:MaxPermSize=384m" />
-		</java>
-	</target>
-
-	<target name="package" depends="assemble">
-		<java classname="org.eclipse.equinox.launcher.Main" fork="true" dir="${baseBuilder}" failonerror="true">
-			<classpath>
-				<pathelement location="${launcher}" />
-			</classpath>
-			<arg line="-configuration configuration " />
-			<arg line="-data ${buildworkspace} " />
-			<arg line="-application org.eclipse.ant.core.antRunner " />
-			<arg line="-buildfile ${basedir}/assemble.xml" />
-			<arg line="-propertyfile ${basedir}/build.properties " />
-			<arg line="package " />
-			<arg line="-DbuildArch=${buildArch} " />
-			<arg line="-DbuildDirectory=${buildDirectory} " />
-			<arg line="-DbuildId=${buildId} " />
-			<arg line="-DfeatureToBuild=${featureToBuild} " />
-			<arg line="-DbuildId=${buildId} " />
-			<jvmarg value="-Xms512M" />
-			<jvmarg value="-Xmx2048M" />
-			<jvmarg value="-XX:MaxPermSize=512M" />
-		</java>
 	</target>
 
 	<target name="p2prep" depends="build">
